# OpenMP-CUDA-Accelerated-High-Performance-Image-Processing-Library

./: README.md
bindings/: CMakeLists.txt  bindings.cpp
include/: ImageProcessor.h
python_script/: test_image_processing.py
src/: ImageProcessor.cpp  main.cpp
src/cuda kernels/: adaptive_threshold.cu  edge_detection.cu  gaussian_blur.cu  invert.cu
